k8s/payment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  selector:
    component: payment
  ports:
    - port: 5002
      name: http
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment
  template:
    metadata:
      labels:
        component: payment
    spec:
      containers:
        - name: payment
          # The image needs to be built and pushed to online registry
          image: farsene/payment-mqtt
          command: [ "/bin/sh", "-c", "go run main.go" ]
