k8s/stock-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: NodePort
  selector:
    component: stock
  ports:
    - port: 5001
      name: http
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock
  template:
    metadata:
      labels:
        component: stock
    spec:
      containers:
        - name: stock
          # The image needs to be built and pushed to online registry
          image: farsene/stock-mqtt
          command: [ "/bin/sh", "-c", "go run main.go" ]
